# Evaluacion-pinguinos

./: README.md
app/: Dockerfile  README.md  app.py  columnas.csv  modelo_penguins.keras  pyproject.toml  scaler.pkl
parte0/: README.md  pyproject.toml  train.py
